# telegram-imgur

./: .gitignore  README.md  main.py  puller.py  pyproject.toml
telegram_imgur_bot/: auth.py  bot.py  db.py  item.py  upload.py
tests/: test_telegram_imgur_bot.py
