[tool.poetry]
name = "telegram-imgur-bot"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyTelegramBotAPI = "^3.7.3"
deta = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
